--- a/index.css
+++ b/index.css
@@ -1,78 +1,3 @@
-.header {
-  border: 1px solid black;
-}
-.card {
-  width: 400px;
-  height: 460px;
-  border: 1px solid rgb(219, 216, 216);
-  padding: 5px;
-  cursor: pointer;
-  background-color: #f0f0f0;
-  margin: 10px;
-  border-radius: 10px;
-}
-.card:hover {
-  box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2),
-    0 10px 10px 0 rgba(0, 0, 0, 0.19);
-}
-.resContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-.cardImg {
-  width: 400px;
-  height: 250px;
-  object-position: 10%;
-  object-fit: cover;
-  border-radius: 10px;
-}
-.logo {
-  height: 100px;
-  object-position: 50%;
-  object-fit: cover;
-}
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  padding: 0px;
-}
-.list {
-  display: flex;
-  align-items: center;
-  font-size: x-large;
-}
-ul > li {
-  list-style: none;
-  padding: 10px;
-  font-size: x-large;
-}
-.menuItem {
-  list-style: circle;
-  font-size: medium;
-}
-
-.shimmer-card {
-  width: 400px;
-  border: 1px solid rgb(255, 255, 255);
-  border-radius: 10px;
-  padding: 5px;
-  background-color: #f0f0f0;
-  margin: 10px;
-  height: 460px;
-}
-
-.shimmer-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-.btn-login {
-  padding: 0 20px;
-  font-size: x-large;
-  cursor: pointer;
-}
-a {
-  text-decoration: none;
-  color: black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
